Thu Jan 04 05:19:37 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.

Wed Jan  3 10:35:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: add doc/fr/Makefile

Tue Jan  2 22:44:14 CST 2001 Adam Heath <doogie@debian.org>

  * lib/help.c: Removed an 'inlined' version of waitsubproc, and call
    the function instead.

Mon Jan  1 02:07:47 CST 2001 Adam Heath <doogie@debian.org>

  * lib/varbuf.c, include/dpkg-db.h: Add varbufdupc().

Mon Jan  1 02:04:26 CST 2001 Adam Heath <doogie@debian.org>

  * lib/parse.c: Use of PKGIOFF macro was checked in prematurely.

Sat Dec 30 23:08:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * doc/Makefile.in: add fr to SUBDIRS
  * doc/fr: new directory with French manpages
  * THANKS: add philippe batailler who translated the manpages to French

Sat Dec 30 20:38:20 CST 2000 Adam Heath <doogie@debian.org>
  
  * utils/start-stop-daemon.c: --name is now allowed on the command
    line.

Fri Dec 29 12:39:09 CST 2000 Adam Heath <doogie@debian.org>

  * lib/parse.c: Properly parse control files that only have one
    paragraph, which means no double ending new line.

Thu Dec 28 18:43:37 CST 2000 Adam Heath <doogie@debian.org>

  * lib/database.c: Fix minor memleak in used function hashreport.
    Thanks to Adrian Bridgett <bridgett@debian.org>.

Wed Dec 27 14:54:55 CST 2000 Adam Heath <doogie@debian.org>

  * lib/parse.c:  Removed use of getc(), and instead use pointers
    into a gigantic memory buffer(either thru mmap, or by copying
    into a large buffer(#define PARSE_MMAP)).  Nice little speedup,
    and also had the added benefit of removing varbuf* code from
    parsedb().

Wed Dec 27 04:58:22 CST 2000 Adam Heath <doogie@debian.org>

  * lib/fields.c: Removed use of varbuf* code from f_dependency(),
    for a speedup.

Wed Dec 27 04:55:14 CST 2000 Adam Heath <doogie@debian.org>

  * lib/fields.c: Detect and issue an error when a space is in a
    version.
