@@ -102,27 +102,34 @@ void m_pipe(int *fds) {
   ohshite(_("failed to create pipe"));
 }
 
-void checksubprocerr(int status, const char *description, int sigpipeok) {
+int checksubprocerr(int status, const char *description, int sigpipeok, int warn) {
   int n;
   if (WIFEXITED(status)) {
-    n= WEXITSTATUS(status); if (!n) return;
-    ohshit(_("subprocess %s returned error exit status %d"),description,n);
+    n= WEXITSTATUS(status); if (!n) return n;
+    if(warn)
+      fprintf(stderr, _("dpkg: warning - %s returned error exit status %d\n"),description,n);
+    else
+      ohshit(_("subprocess %s returned error exit status %d"),description,n);
   } else if (WIFSIGNALED(status)) {
-    n= WTERMSIG(status); if (!n || (sigpipeok && n==SIGPIPE)) return;
-    ohshit(_("subprocess %s killed by signal (%s)%s"),
+    n= WTERMSIG(status); if (!n || (sigpipeok && n==SIGPIPE)) return 0;
+    if (warn)
+      ohshit(_("dpkg: warning - %s killed by signal (%s)%s\n"),
+           description, strsignal(n), WCOREDUMP(status) ? ", core dumped" : "");
+    else
+      ohshit(_("subprocess %s killed by signal (%s)%s"),
            description, strsignal(n), WCOREDUMP(status) ? ", core dumped" : "");
   } else {
     ohshit(_("subprocess %s failed with wait status code %d"),description,status);
   }
 }
 
-void waitsubproc(pid_t pid, const char *description, int sigpipeok) {
+int waitsubproc(pid_t pid, const char *description, int sigpipeok, int warn) {
   pid_t r;
   int status;
 
   while ((r= waitpid(pid,&status,0)) == -1 && errno == EINTR);
   if (r != pid) { onerr_abort++; ohshite(_("wait for %s failed"),description); }
-  checksubprocerr(status,description,sigpipeok);
+  return checksubprocerr(status,description,sigpipeok, warn);
 }
 
 ssize_t buffer_write(buffer_data_t data, void *buf, ssize_t length, char *desc) {
