@@ -1,3 +1,12 @@
+Thu Jan  4 01:20:27 CST 2001 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/build.c, dpkg-deb/extract.c, dpkg-deb/info.c,
+    include/dpkg.h.in, lib/mlib.c, main/archives.c, main/enquiry.c,
+    main/help.c main/processarc.c: Add 'warn' parameter to waitsubproc
+    and checksubprocerr, and also add a return value.  This fixes my
+    last checkin, where maintainer_script_alternative would run
+    both the old and new script.
+
 Thu Jan 04 05:19:37 CET 2001 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
